--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "emoji-mart": "^2.4.1",
+    "moment": "^2.20.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
