--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "emoji-mart": "^2.4.1",
+    "emoji-picker-textfield": "0.0.13",
     "moment": "^2.20.1",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-emojione": "^5.0.0",
+    "react-tag-cloud": "^1.1.1"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
